# idi-scrap

./: .gitignore  Cargo.toml  example.env  readme.md
fonts/: manifest.json
src/: document.rs  errors.rs  main.rs  remote.rs
