[package]
edition = "2021"
name = "idi-scrap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.2.1"
dotenv = "0.15.0"
genpdf = {version = "0.2.0", features = ["images"]}
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
